--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
         name: Login DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.1042004021@qq.com }}
+          password: ${{ secrets.jl19981222 }}
 
       - name: Build Image
         uses: docker/build-push-action@v2
